class proxy support yay!